# desktopfolder

./: .atom-dbg.cson  .gitignore  .travis.yml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  ISSUE_TEMPLATE.md  README.md  meson.build  meson_options.txt  mkrelease.sh  pre-commit  updatePot.sh
.tx/: config
arch/: PKGBUILD  README.md
data/: Application.css  Reset.css  com.github.spheras.desktopfolder.appdata.xml  com.github.spheras.desktopfolder.appdata.xml.in  com.github.spheras.desktopfolder.desktop  com.github.spheras.desktopfolder.desktop.in  com.github.spheras.desktopfolder.gschema.xml  css.gresource.xml  meson.build  org.spheras.desktopfolder.appdata.xml  org.spheras.desktopfolder.desktop  org.spheras.desktopfolder.gschema.xml
data/css/: Application.css
debian/: changelog  control  copyright  postinst  prerm  rules
etc/: knowhow  uncrustify-elementary-vala.cfg
po/: LINGUAS  POTFILES.in  README  bg.po  ca.po  com.github.spheras.desktopfolder.pot  cs.po  da.po  de_DE.po  en_GB.po  eo.po  es.mo  es.po  fi.po  fr.po  fr_FR.po  get_merge_translations.sh  he.po  hu.po  it.po  ja.po  ko.po  lt.po  ms_MY.po  nb.po  nl_NL.po  oc.po  org.spheras.desktopfolder.pot  org.spheras.ekm4android.pot  pl.po  pt_BR.po  pt_PT.po  ro_RO.po  ru.po  sq.po  sr.po  sr_RS.po  sr_RS@latin.po  sv.po  tr.po  (+2 more)
snap/: snapcraft.yaml
src/: Application.vala  LanguageText.vala  Resources.vala
src/Dialogs/: PanelPropertiesWindow.vala  ProgressDialog.vala
src/dialogs/: PanelPropertiesWindow.vala  ProgressDialog.vala
src/logic/: DesktopManager.vala  FolderManager.vala  ItemManager.vala  NoteManager.vala  PhotoManager.vala
src/logic/folderarrangement/: FolderArrangement.vala  FolderArrangementFree.vala  FolderArrangementGrid.vala  FolderArrangementManaged.vala  FolderGrid.vala  FolderSort.vala  FolderSortByName.vala  FolderSortBySize.vala  FolderSortByType.vala  FreeArrangement.vala  GridArrangement.vala  ManagedArrangement.vala
src/settings/: FolderSettings.vala  ItemSettings.vala  NoteSettings.vala  PhotoSettings.vala  PositionSettings.vala
src/utils/: ClipboardManager.vala  DndHandler.vala  EditableLabel.vala  MenuItemSeparator.vala  RenameDialog.vala  Util.vala
src/utils/animation/: Fx.vala  GtkAnimation.vala
src/utils/clipboard/: ClipboardFile.vala  ClipboardManager.vala
src/utils/dragndrop/: DndBehaviour.vala  DndHandler.vala  DndView.vala  DragNDrop.vala
src/utils/menu/: MenuItemColor.vala  MenuItemSeparator.vala
src/utils/shortcut/: CustomShortcutSettings.vala  Shortcut.vala
src/widgets/: DesktopWindow.vala  FolderWindow.vala  ItemView.vala  NoteWindow.vala  PhotoWindow.vala  ProgressDialog.vala
src/windows/: Folder.vala  Item.vala  folder.vala  item.vala
